[package]
name = "rust-for-it"
description = "Wait for one or more services to be available before executing a command."
version = "2.0.0"
edition = "2021"
authors = ["Sebastian Pipping <sebastian@pipping.org>"]
license = "MIT"

[dependencies]
anstream = "0.6.18"
clap = { version = "4.5.30", features = ["cargo", "color"] }
extend-lifetime = "0.2.0"
indoc = "2.0.5"
log = { version = "0.4.20", features = ["kv_unstable"] }
once_cell = "1.20.2"
regex = "1.11.0"
subprocess = "0.2.9"

[profile.release]
# Ideas from https://github.com/johnthagen/min-sized-rust
opt-level = "z"
strip = true
lto = true
codegen-units = 1
